--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <android.support.design.widget.FloatingActionButton
-            android:layout_width="59dp"
-            android:layout_height="55dp"
-            android:clickable="true" app:srcCompat="@android:drawable/ic_input_add"
-            android:id="@+id/add_new_task_button" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.945"
-            app:backgroundTint="@color/colorPrimary"
-            android:visibility="gone"/>
+    <android.support.v7.widget.RecyclerView
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/new_task_layout" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/todo_list_view"/>
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="61dp"
@@ -34,7 +31,7 @@
         <ImageButton
                 android:layout_width="25dp"
                 android:layout_height="25dp" app:srcCompat="@drawable/ic_today_black_24dp"
-                android:id="@+id/imageButton2"
+                android:id="@+id/date_picker_button"
                 android:background="@color/colorPrimaryDark"
                 app:layout_constraintStart_toEndOf="@+id/imageButton3"
                 app:layout_constraintBottom_toBottomOf="parent" android:padding="10dp"
@@ -47,7 +44,7 @@
                 android:ems="10"
                 android:id="@+id/add_new_task_edittext"
                 android:background="@color/colorPrimaryDark"
-                app:layout_constraintBottom_toTopOf="@+id/imageButton2" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/date_picker_button" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="5dp" android:layout_marginBottom="4dp" android:hint="Enter To Do"
                 android:textColor="@color/colorGray"
                 android:textColorHint="@color/colorGray"
@@ -56,7 +53,7 @@
         <ImageButton
                 android:layout_width="25dp"
                 android:layout_height="25dp" app:srcCompat="@drawable/ic_flag_black_24dp"
-                android:id="@+id/priority_button" app:layout_constraintStart_toEndOf="@+id/imageButton2"
+                android:id="@+id/priority_button" app:layout_constraintStart_toEndOf="@+id/date_picker_button"
                 android:layout_marginStart="24dp"
                 app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorPrimaryDark"
                 android:layout_marginBottom="4dp"/>
